[metadata]
name = nari
version = attr: nari.__version__
author = Nonowazu
author_email = oowazu.nonowazu@gmail.com
description = A small project to parse FFXIV network event data
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requiers = >=3.10
include_package_data = True
packages = find:

[options.packages.find]
exclude =
    docs*
    scripts*
    test*

[options.package_data]
nari = ["py.typed"]

[options.extras_require]
dev =
    mypy==0.942
    pylint==2.13.4
    coverage==6.5.0
docs = pdoc3
