[package]
name = "nari-act_ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nari_act_ext"
crate-type = ["cdylib"]
path = "ext/lib.rs"

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
chrono = "0.4"
md-5 = "0.10.1"
sha2 = "0.10.2"
